# organiser-pro

./: .gitignore  AUDIT_REPORT.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  install_and_run.sh  install_desktop.sh  organiserpro.desktop  pyproject.toml  setup.py  standardize-one.sh  test_gui_linux.py
.github/: TOPICS.md  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  release-please.yml
.github/workflows_off/: ci.yml  codeql.yml
OrganiserPro/: cli.py  gui.py  gui.py.backup
_std/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md
_std/.github/ISSUE_TEMPLATE/: repo_audit.yml
_std/.github/workflows/: ci.yml
